deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bazaruto
  labels:
    name: bazaruto
    app: bazaruto
